# Intro_Cpp

./: .gitignore
CLion1/: CMakeLists.txt  main.cpp
Task2/: CMakeLists.txt  ScopeTimer.cpp  ScopeTimer.h  main.cpp
Task3/: CMakeLists.txt  dynamicobjectlist.cpp  dynamicobjectlist.hpp  object.cpp  object.h  program.cpp
Task4/: CMakeCache.txt  CMakeLists.txt  Makefile  RandomChar.cpp  RandomChar.h  Task4  TestObject.cpp  TestObject.h  cmake_install.cmake  program.cpp
Task5/: CMakeLists.txt  dynamicobjectlist.cpp  dynamicobjectlist.hpp  object.cpp  object.h  program.cpp
Task5_2/: dynamicobjectlist.cpp  object.cpp  object.h
Task6/: .operators.hpp.swp  CMakeLists.txt  node.cpp  node.hpp  operators.cpp  operators.hpp  program.cpp  valuenode.cpp  valuenode.hpp
Task7/: CMakeCache.txt  CMakeLists.txt  Makefile  Task7  cmake_install.cmake  main.cpp  myvector.h
Task8/: CMakeCache.txt  CMakeLists.txt  Makefile  Task8  cmake_install.cmake  log.txt  program.cpp  target.hpp  target_old.hpp  unittests.hpp
Task9/: CMakeCache.txt  CMakeLists.txt  Makefile  Task9  cmake_install.cmake  consolepolicy.cpp  consolepolicy.hpp  filepolicy.cpp  filepolicy.hpp  log.txt  logger.cpp  logger.hpp  program.cpp
